--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "http-errors": "~1.6.3",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0",
-    "socket-io": "^1.0.0"
+    "socket.io": "^3.0.1"
   },
   "devDependencies": {
     "mocha": "^8.2.1",
