--- a/client/package.json
+++ b/client/package.json
@@ -7,5 +7,20 @@
     "react-redux": "^7.2.2",
     "react-scripts": "^4.0.0",
     "socket.io-client": "^3.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
