--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "axios": "^0.21.0",
     "mapbox-gl": "^1.12.0",
     "react": "^17.0.1",
