--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@turf/turf": "^5.1.6",
+    "@types/turf": "^3.5.32",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
